--- a/public/index.html
+++ b/public/index.html
@@ -3,57 +3,50 @@
 
 <head>
     <title>Mifinity</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link href="nm/angular-material/angular-material.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="styles.min.css" rel="stylesheet" />
 </head>
 
 <body layout="column" ng-cloak>
-    <!-- Container #1 (see wireframe) -->
     <md-toolbar layout="row">
         <h1>Angular Task</h1>
     </md-toolbar>
 
-    <!-- Container #2 -->
     <div flex layout="row">
 
         <md-sidenav md-is-locked-open="true" class="md-whiteframe-z2">
             <md-list>
 
-                <!-- List item #1 -->
-                <md-list-item>
-                    <md-button>
-                        Lia Luogo
+                <md-list-item ui-sref-active="active">
+                    <md-button ui-sref="home">
+                        <i class="fa fa-home" aria-hidden="true"></i>
+                        <span>Home</span>
                     </md-button>
                 </md-list-item>
 
-                <!-- List item #2 -->
-                <md-list-item>
-                    <md-button>
-                        Lawrence Ray
+                <md-list-item ui-sref-active="active">
+                    <md-button ui-sref="contactList">
+                        <i class="fa fa-address-book" aria-hidden="true"></i>
+                        <span>Contacts</span>
                     </md-button>
                 </md-list-item>
 
             </md-list>
         </md-sidenav>
 
-        <md-content flex id="content">
-            <!-- User details sample -->
-
-            <h2>Lia Luogo</h2>
-            <p>
-                I love cheese...
-            </p>
-        </md-content>
+        <md-content flex id="content" ui-view></md-content>
 
     </div>
 
-    <script src="nm/angular/angular.min.js" type="text/javascript"></script>
-    <script src="nm/angular-animate/angular-animate.min.js" type="text/javascript"></script>
-    <script src="nm/angular-aria/angular-aria.min.js" type="text/javascript"></script>
-    <script src="nm/angular-material/angular-material.min.js" type="text/javascript"></script>
-
-    <script src="js/app.js" type="text/javascript"></script>
+    <script src="scripts.min.js" type="text/javascript"></script>
+    <script src="templates.js" type="text/javascript"></script>
 </body>
 
 </html>
